Error handler crash fix, unify swagger
